fixed the Jumper- out of scope

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ h1 {
 
 }
 canvas {
-    background-color: black;
+    background-color: yellow;
     border: 5px solid grey;
     height: 299px;
     width: 573px;
